break: revamp the project for a better codebase
